--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
-theme: minimal-mistakes-jekyll
+title: Miley Nguyen - Data Visualization Porfolio
+logo: /assets/674825dbde074a8b6320d927.png
+#description: text below image show_down loads: true
+theme: jekyll-theme-minimal
