--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Miley Nguyen
 logo: /assets/674825dbde074a8b6320d927.png
-description: Dashboard visualization: PowerBI, Tableau, Shiny (built by R & Python), Streamlit.
+description: "Dashboard visualization: PowerBI, Tableau, Shiny (built by R & Python), Streamlit."
 show_down loads: true
 theme: jekyll-theme-minimal
